# convert-easy-api

./: .dockerignore  .env.container  .env.example  .gitignore  .renderignore  CHANGELOG.md  Containerfile  Dockerfile  LICENSE  README.md  commands.md  docker-compose.dev.yaml  docker-compose.yaml  mcp.json  pyproject.toml  pytest.ini  render.yaml  skills-lock.json
.agents/skills/typescript-expert/: SKILL.md
docs/: DEPLOYMENT.md  FASE_1_IMAGE_PROCESSING.md  FASE_2_DOCUMENT_PROCESSING.md  IMPLEMENTATION_PROGRESS.md  PROJECT_COMPLETE.md  TESTING.md
openspec/: config.yaml
openspec/changes/video-conversion/: proposal.md  tasks.md
openspec/changes/xml-conversion/: design.md  proposal.md  tasks.md
openspec/specs/audio-processing/: spec.md
openspec/specs/xml-conversion/: spec.md
scripts/: build-podman.sh  compose.sh  run-podman.sh  run-tests.sh  stop-podman.sh
shared/: exceptions.py
shared/config/: settings.py
shared/events/: __init__.py  event_bus.py
shared/queue/: __init__.py  queue_port.py
src/: __init__.py  lifespan.py  main.py
src/application/: __init__.py  commands.py  handlers.py  queue_service.py
src/domain/: __init__.py
src/domain/job/: __init__.py  job.py  job_events.py  job_status.py
src/infrastructure/: mime_validator.py
src/infrastructure/converters/: __init__.py  audio_converter.py  background_remover.py  document_converter.py  image_compressor.py  image_converter.py  image_pipeline.py  pdf_processor.py  video_converter.py  watermark_service.py  xml_converter.py
src/infrastructure/events/: __init__.py  websocket_publisher.py
(+42 files in other folders)
